@@ -37,7 +37,7 @@ namespace C.DefaultSettings
             Bam.Core.Module module)
         {
             settings.OutputType = ELinkerOutput.Executable;
-            settings.LibraryPaths = new Bam.Core.Array<Bam.Core.TokenizedString>();
+            settings.LibraryPaths = new Bam.Core.TokenizedStringArray();
             settings.Libraries = new Bam.Core.StringArray();
             settings.DebugSymbols = (module.BuildEnvironment.Configuration == Bam.Core.EConfiguration.Debug || module.BuildEnvironment.Configuration == Bam.Core.EConfiguration.Profile);
         }
